YelpCamp/v2/readme.md
#YelpCamp
* Add Landing Page
* Add Campgrounds Page that lists all campgrounds

#Each Campground has:
 * Name
 * Image

#How to begin:
* npm init
* npm install express ejs --save
* touch app.js

* mkdir views
* touch view/landing.ejs

#Layout and Basic Styling
* Create our header and footer partials
* Add in Bootstrap

#Creating New Campgrounds
* Setup new campgrounds POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form

#Style the campgrounds page
* Add a better header/title
* Make campgrounds display in a grid

#Style the Navbar and Form
* Add a navbar to all templates
* Style the new campground form

#Add Mongoose
* Install and configure mongoose
* Setup campground model
* Use campground model inside of our routes!

#Show Page
* Review the RESTful routes we've seen so far
* Add description to our campground model
* Show db.collection.drop()
* Add a show route/template

RESTFUL ROUTES

name    url         verb    desc.
================================================
INDEX   /dogs       GET     Display a list of all dog   
NEW     /dogs/new   GET     Displays form to make a new dog
CREATE  /dogs       POST    Add new dog to DB
SHOW    /dogs/:id   GET     Shows info about one dog